# rtkdata-fw

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  version.sh
.github/workflows/: build.yml  promote-ota.yml  release.yml
docs/: UM980-config-research.md  enroll-per-device-key.md  make_seq.py  ota-anti-brick.md  ship-runbook.md
main/: CMakeLists.txt  config.c  dns_server.c  gnss.c  idf_component.yml  main.c  provisioning.c  state.c  status_led.c  supervisor.c  uart.c  update.c  util.c  web_server.c  wifi.c
main/include/: config.h  dns_server.h  gnss.h  provisioning.h  state.h  status_led.h  supervisor.h  tasks.h  uart.h  update.h  util.h  web_server.h  wifi.h
main/include/interface/: ntrip.h
main/interface/: ntrip_server.c  socket_client.c
ota/: release.json
tools/: flash_device.py  provision_device.py  test_enroll.py
www/: index.html
